# open-tricore

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md
bsp/tc4d7/: README.md  adc.c  adc.h  adc_demo.c  blink.c  boot.ld  can.c  can.h  can_demo.c  clock.c  clock.h  crt0.S  crt0.c  dma.c  dma.h  dma_demo.c  flash.c  flash.h  flash.ld  flash_demo.c  gpio.c  gpio.h  gpio_demo.c  hello.c  hello_uart.c  hosted.ld  i2c.c  i2c.h  i2c_demo.c  irq.c  irq.h  ivt.S  pwm.c  pwm.h  pwm_demo.c  ram.ld  selftest.c  smp.c  smp.h  smp_all_demo.c  (+12 more)
docs/: debugging.md  gdbserver-design.md  hardware-notes.md  linux-setup.md  ppu-reverse-engineering.md
ppu/: README.md  checksum.s  fastio.s  fastio_demo.c  rt.inc  sum.s
scripts/: build.sh  install-tas.sh  run-tas-server.sh  test-bsp.sh
toolchain/: README.md  build.sh
tools/common/: CMakeLists.txt  ppu.c  ppu.h  tcmcd.c  tcmcd.h
tools/led-demo/: CMakeLists.txt  main.cpp
tools/tc-gdbserver/: CMakeLists.txt  README.md  main.c  rsp.c  rsp.h
tools/tc-load/: CMakeLists.txt  README.md  main.c
tools/tc-ppu/: CMakeLists.txt  main.c
